# clifb

./: .gitignore  CMakeLists.txt  README.md
inc/: clifb.h
src/: clifb.c  mono_doubled_fb.c  symbol_fb.c
src/tests/: main.c
